# llm-grpc-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
cli/: __init__.py  client.py  compile.py  echo.py  grpc.py  main.py  version.py
client/: __init__.py  pyproject.toml  reflection.py  test.py
client/cli/: client.py  echo.py  main.py  version.py
client/reflection/: __init__.py  grpcReflection.py  llmClient.py  promptClient.py  serviceReflection.py
grpc/: Cargo.toml  build.rs
grpc/protos/llm/: prompt.proto  service.proto
grpc/protos/v1/llm/: service.proto
grpc/protos/v1/prompt/: service.proto
grpc/src/: error.rs  lib.rs  logging.rs  utils.rs
grpc/src/services/: llm.rs  mod.rs
grpc/src/v1/: messages.rs  mod.rs
grpc/src/v1/pb/: mod.rs  v1.llm.service.rs  v1.prompt.service.rs  v1_llm_service.rs  v1_prompt_service.rs
grpc/src/v1/services/: llm.rs  mod.rs  prompt.rs
llm/: Cargo.toml
llm/src/: batch_encoding.rs  config.rs  error.rs  lib.rs  logits_processor.rs  model.rs  model_files.rs  prompt.rs  prompt_config.rs  text_generation.rs  tokenizer.rs  tokenizer_files.rs  utils.rs
llm/src/device/: device.rs  device_map.rs  error.rs  mod.rs
llm/src/generation/: generation_batch.rs  generation_logits_processor.rs  generation_reply.rs  generation_request.rs  generation_result.rs  generation_step.rs  generator.rs  mod.rs  text_generation.rs
llm/src/generation/tasks/: batching.rs  decoder.rs  generation.rs  mod.rs  tokenize.rs
llm/src/logits/: logits_preprocessor.rs  logits_processor.rs  mod.rs
llm/src/models/: error.rs  mistral.rs  mod.rs  model.rs  model_config.rs  model_files.rs  model_type.rs  quantized_mistral.rs
llm/src/models/models/: mistral.rs  mod.rs  quantized_mistral.rs
llm/src/prompts/: mod.rs  prompt.rs  prompt_config.rs
llm/src/tokenizers/: batch_encoding.rs  error.rs  mod.rs  tokenized_batch.rs  tokenizer.rs  tokenizer_files.rs
llm/src/tokenizers/template/: chat_message.rs  chat_template.rs  chat_template_inputs.rs  error.rs  mod.rs
protos/service/grpc/llm/: llm.proto
protos/service/llm/grpc/: llm.proto  prompt.proto  service.proto
scripts/system/: setup.sh
service/: __init__.py  client.py  server.py  typed.py
service/env/: setup.py
service/grpc/: __init__.py  client.py  clientBase.py  server.py
service/grpc/classes/: __init__.py
service/grpc/llm/: __init__.py  llmClient.py  llmService.py  llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py
service/llm/: __init__.py  load.py  service.py
service/llm/classes/: __init__.py  batchQueue.py  generationBatch.py  generationPromptBatch.py  generationPromptResult.py  model.py  tokenizedGenerationPrompt.py  tokenizedGenerationPromptBatch.py  tokenizer.py
service/llm/generation/: generationChunk.py  generationPromprResultBatch.py  generationPrompt.py  load.py  model.py  modelConfig.py  modelProcess.py  tokenizedGenerationPromptBatch.py
service/llm/grpc/: __init__.py  llmClient.py  llmService.py
