
[workspace]
members = ["grpc", "llm"]

[workspace.package]
name = "llm_grpc_service"
version = "0.1.0"
edition = "2021"
authors = []
description = ""
documentation = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
llm = { path = './llm' }
grpc = { path = './grpc' }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = [
    "cuda",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
