
[workspace]
members = ["grpc", "llm"]

[workspace.package]
name = "llm_grpc_service"
version = "0.1.0"
edition = "2021"
authors = []
description = ""
documentation = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = [
    "cuda",
] }
candle-examples = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
clap = { version = "4.2.4", features = ["derive"] }
grpc = { path = './grpc' }
hf-hub = "0.3.0"
llm = { path = './llm' }
tokenizers = { version = "0.19.1" }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
serde_json = "1.0.99"
serde = "1.0.203"
