
[workspace]
members = ["grpc", "llm"]

[workspace.package]
name = "llm_grpc_service"
version = "0.1.0"
edition = "2021"
authors = []
description = ""
documentation = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
approx = "*"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1", features = [
    "cuda",
] }
candle-examples = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = [
    "cuda",
] }
clap = { version = "4.2.4", features = ["derive"] }
grpc = { path = './grpc' }
hf-hub = "0.3.0"
llm = { path = './llm' }
tokenizers = { version = "0.19.1" }
tonic = "0.11.0"
tonic-build = { version = "0.11.0", features = ["prost"] }
tonic-health = "0.11.0"
tonic-reflection = "0.11.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
serde_json = "1.0.99"
serde = "1.0.203"
prost-types = { version = "0.12" }
prost = { version = "*" }
thiserror = "1.0.61"
rand = "*"
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
