[package]
name = "grpc"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm.workspace = true
tonic = "0.11.0"
tracing.workspace = true
tracing-subscriber.workspace = true
