[package]
name = "llm"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core.workspace = true
candle-examples.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
clap.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
