[package]
name = "llm"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { workspace = true }
candle-examples = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
clap = { workspace = true }
tokenizers = { workspace = true }
indexmap = { workspace = true }
hf-hub = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
approx = { workspace = true }
rand = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
